--- a/.github/workflows/test-docker-image.yml
+++ b/.github/workflows/test-docker-image.yml
@@ -12,8 +12,8 @@ jobs:
 
     steps:
       - name: Pull Docker image
-        run: docker pull ridha_username/custom_dev_env
+        run: docker pull yatogamiitzy/test
 
       - name: Run docker container and check tools
         run: |
-          docker run --rm ridha_username/custom_dev_env bash -c "            echo 'Python:' && python3 --version &&             echo 'Node:' && node --version &&             echo 'Golang:' && go version &&             echo 'MongoSH:' && mongosh --version &&             echo 'PostgreSQL:' && psql --version           "
+          docker run --rm yatogamiitzy/test bash -c "            echo 'Python:' && python3 --version &&             echo 'Node:' && node --version &&             echo 'Golang:' && go version &&             echo 'MongoSH:' && mongosh --version &&             echo 'PostgreSQL:' && psql --version           "
